# hi3516d_osd

./: .gitignore  osd.c  osd.h
src_ipc_hi3516d_070_16M_osd/: CMakeLists.txt  top.cmake
src_ipc_hi3516d_070_16M_osd/demo/: CMakeLists.txt  main.c
src_ipc_hi3516d_070_16M_osd/osd/: CMakeLists.txt  osd.c  osd.h
